# consistencychecker

./: README copy.md  README.md  pyproject.toml
llmcheck/: cli.py  config.yaml  config_coding.yaml  config_translation.yaml  config_v2.yaml  config_v3.yaml  neocfg.yaml  prog.yaml  results-2024-12-29-23:28:07.yaml  results-2025-01-05-09:45:09.yaml  results-2025-01-05-09:47:32.yaml  results-2025-01-06-07:30:00.yaml  results-2025-01-06-11:30:31.yaml  results-2025-01-06-11:32:45.yaml  results-2025-01-06-11:47:40.yaml  results-2025-01-06-12:20:38.yaml  results-2025-01-06-12:30:03.yaml  results-2025-01-06-21:59:46.yaml  results-2025-01-16-01:26:20.yaml  results-2025-01-16-01:55:21.yaml  results-2025-01-16-02:16:32.yaml  results-2025-01-16-02:31:25.yaml  results-2025-01-16-02:41:19.yaml  results-2025-01-16-02:49:19.yaml  results-2025-01-16-03:01:53.yaml  results-2025-01-16-19:07:20.yaml  results-2025-01-16-19:11:19.yaml  results-2025-01-16-19:23:16.yaml  results-2025-01-16-19:32:11.yaml  results-2025-01-16-19:36:13.yaml  results-2025-01-16-19:41:03.yaml  results-2025-01-16-19:51:35.yaml  results-2025-01-16-20:34:32.yaml  results-2025-01-16-20:43:13.yaml  results-2025-01-16-22:06:40.yaml  results-2025-01-16-22:10:17.yaml  results-2025-01-17-07:04:56.yaml.  results-2025-01-17-10:02:42.yaml  results-2025-01-17-10:18:09.yaml.
llmcheck/core/: __init__.py  evaluator.py  generator.py  operations.py  tree.py
llmcheck/metrics/: __init__.py  api.py  base.py  bleu.py  factory.py  huggingface.py  rouge.py
llmcheck/nodes/: node.py  (+1 more)
tests/: test_async.py  test_sync.py
(+11 files in other folders)
